Fixed bug where header was still white in dark theme on mobile view

--- a/components/LogoHeader/LogoHeader.module.css
+++ b/components/LogoHeader/LogoHeader.module.css
@@ -47,6 +47,12 @@
         font-size: 70px;
         display: none;
     }
+
+    @media (prefers-color-scheme: dark) {
+        .header {
+            background-color: black;
+        }
+    }
 }
 
 @media (prefers-color-scheme: dark) {
